# sowa-cli

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/transaction/: history.rs  mod.rs  send.rs
src/utils/: config.rs  mod.rs  rpc.rs
src/wallet/: account.rs  keypair.rs  mod.rs
