[package]
name = "sowa"
description = "A Solana Wallet CLI"
authors = ["Sam <asamadans@gmail.com>"]
version = "1.1.0"
edition = "2021"
repository = "https://github.com/SAMAD101/sowa"
homepage = "https://github.com/SAMAD101/sowa"
readme = "README.md"
license-file = "LICENSE"
keywords = ["solana", "cli", "wallet", "sowa"]
categories = ["command-line-interface", "command-line-utilities", "development-tools", "cryptography::cryptocurrencies"]

[dependencies]
solana-sdk = "2.0.3"
solana-client = "2.0.3"
anyhow = "1.0.86"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.121"
clap = {  version = "4.5.10", features = ["derive"] }
dirs = "5.0.1"